--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,13 +49,14 @@ dependencies {
     kapt "androidx.room:room-compiler:2.4.2"
     implementation("androidx.activity:activity-ktx:1.4.0")
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
+    implementation "androidx.room:room-paging:2.4.2"
 
-//    //Paging Library
+//    Paging Library
 //    implementation 'androidx.paging:paging-runtime-ktx:3.0.0-alpha06'
 //
 //    //ViewModel and LifeCycle
-//    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0"
-//    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
 //    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
 //    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 //
